Gate buyer access behind invite codes

--- a/.env.local.example
+++ b/.env.local.example
@@ -4,3 +4,8 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY="YOUR_PUBLIC_ANON_KEY"
 
 # Optional: only needed if you add server-side admin routes later
 SUPABASE_SERVICE_ROLE_KEY="YOUR_SERVICE_ROLE_KEY"
+
+# Dev-only invite gating (optional)
+DEV_REQUIRE_INVITE_CODE="false"
+DEV_INVITE_CODES="demo-code-1,demo-code-2"
+
