Update Next.js to latest to fix Vercel security block

--- a/package.json
+++ b/package.json
@@ -60,10 +60,10 @@
     "form-data": "^4.0.4",
     "ioredis": "^5.8.1",
     "lucide-react": "^0.545.0",
-    "next": "15.5.4",
+    "next": "^16.0.8",
     "pdf-lib": "^1.17.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.64.0",
     "resend": "^6.1.2",
     "sonner": "^2.0.7",
